# RPA_Tornado

./: .env.example  .gitignore  API_ROUTES_DOCUMENTATION.md  BpdData.py  DBeaver_PostgreSQL_Connection_Guide.md  Git_管理指南.md  PostgreSQL_Container_Setup_Summary.md  README.md  SSH_问题解决报告.md  data_processing.py  dataupdate.py  docker-compose.yml  email.py  exceldetail.py  html_parser.py  main.py  newfile.py  process_excel.py  publicBlock (2).py  publicblock.py  pytest.ini  requirements.txt  swagger.yaml  swagger_platform.yaml  swagger_statistics.yaml  test_api.py  test_sales_report_api.py
rpa/: .gitignore  README.md  pyproject.toml  requirements.txt  ssh_test.md
rpa/.trae/rules/: project_rules.md
rpa/BOSS Zhipin RPA/: cozeapi.py  publicBlock.py
rpa/KOL_SVFmanagesystem/: 1.txt  README.md  extract_data.py  update_extract_data.py  youtubeapi.py
rpa/Lingxing Baohong System RPA/: dateoutput.py  module1.py
rpa/Lingxing_apiProject/: README.md  main.py
rpa/Lingxing_apiProject/Lingxing_Auth/: __init__.py  demo.py  requirements.txt  shopfiy_look.py
rpa/Return_tracking/: FEATURE_ENHANCEMENT.md  README.md  Return_tracking_processing.py  config.py  example_usage.py  filter_amazon_orders.py
rpa/Return_tracking/tests/: __init__.py  test_list_input.py
rpa/boss_zhipin_rpa/: README.md
rpa/bs100_market_analysis_sop/: BS100市场容量分析-明细步骤.docx
rpa/docs/: Makefile  UV_SETUP.md  setup_env.bat
rpa/ecommerce_dashboard/database_system/: api_client.py  check_exchange_rates.py  example_cross_month_usage.py  final_test.py  fix_table_structure.py  improved_sync.py  manage_data.py  sales_sync_flowchart.md
rpa/ecommerce_dashboard/tests/: __init__.py  test.py  test_api_sync.py  test_cross_month_comprehensive.py  test_cross_month_final.py  test_database.py  test_debug.py  test_improved_cross_month_sync.py  test_period_only.py  test_period_sync.py  test_simple_IMF.py
rpa/ecommerce_platforms/: README.md  __init__.py  aliexpress_data_processor.py
rpa/ecommerce_platforms/google_watch/: check_sheets.py  google_data.py
rpa/ecommerce_platforms/jingdong/: inspect_excel.py  inspect_excel_columns.py  jingdong.py  process_jingdong_data.py
rpa/lingxing_baohong_system_rpa/: README.md
rpa/lingxing_baohong_system_rpa/tests/: __init__.py
rpa/marketing_social_media_data/: README.md  REREAD.md  combine_data.py  facebook_processor.py  fill_value_to_json.py  get_data.py  input_output_结构说明.md  main_data_process.py  optimized_data_extractor.py  parse_fetch_inf_to_clear_json.py  platform_config.py  process_allfields.py  修改总结.md  数据处理流程图.md  测试结果报告.md
rpa/marketing_social_media_data/tests/: __init__.py  simple_test.py  (+1 more)
rpa/scripts/: check_project_status.py  checkfiles.py  config.py  getdata.py  module1.py  parse_fetch_inf_to_clear_json.py  process_returns.py  quick_start.py  readcsv.py  setup_env.py
rpa/tests/: test_data_processing.py
rpa/translation/: README.md  data_pro.py  example_usage.py  user_example.py  verify_sales.py
rpa/utils/: logger.py
rpa/xiaomang_CRM/: README.md  dpuser.py  t.py  xiaomang_in.py  xiaomang_inputdata.py  xiaomang_login.py
(+560 files in other folders)
