[project]
name = "rpa-project"
version = "1.0.0"
description = "RPA自动化项目 - 包含财务、ACE、销售、市场营销、电商中心、物流仓储、人事行政等部门的业务流程自动化"
authors = [
    {name = "RPA Team", email = "rpa@company.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # 数据处理和分析
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    
    # 网络请求和API
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "urllib3>=1.26.0",
    
    # 系统操作
    "psutil>=5.9.0",
    
    # 数据处理和解析
    "chardet>=5.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    
    # 加密和安全
    "pycryptodome>=3.15.0",
    "cryptography>=3.4.0",
    
    # 数据序列化
    "orjson>=3.8.0",
    "PyYAML>=6.0.0",
    
    # 语言检测和翻译
    "langdetect>=1.0.9",
    "polyglot>=16.7.4",
    
    # 浏览器自动化
    "DrissionPage>=4.0.0",
    
    # 数据验证
    "pydantic>=1.8.0",
    
    # 异步支持
    "anyio>=3.4.0",
    
    # 终端颜色输出
    "colorama>=0.4.6",
    
    # 类型提示支持
    "typing-extensions>=4.0.0",
    "typing-inspection>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-asyncio>=0.16.0",
    "pytest-cov>=3.0.0",
]

test = [
    "pytest>=6.2.0",
    "pytest-asyncio>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.0",
    "pytest-asyncio>=0.16.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "myvenv",
    "myvenv_plus",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "xbot.*",
    "DrissionPage.*",
    "langdetect.*",
    "polyglot.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=rpa",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[project.scripts]
rpa-process-returns = "process_returns:main"
rpa-process-excel = "process_excel:main"
rpa-bpd-data = "BpdData:main"
rpa-newfile = "newfile:main" 

[tool.hatch.build.targets.wheel]
packages = [] 